static/css/dashboard.css
/* ... */
.dashboard-change-form-menu button{
    background:none;
    width:100%;
    text-align:center;
}

/* button for transition */
#btn_basic_info{
    color: #648efc;
}

/* dashboard-change-form seller */
.dashboard-change-form.seller{
    display: none;
}

.dashboard-change-form.seller input{
    height: 16px;
    background: #F2F2F2;
    margin-bottom: 10px;
    font-size: 14px;
    padding: 5px 10px;
}

.dashboard-change-form.seller .seller_form_content {
    width:100%;
}

.dashboard-change-form.seller .seller_form_title{
    display:inline-block;
    width:25%;
    text-align:center;
}

.dashboard-change-form.seller .seller_form_input {
    display:inline-block;
    width:70%;
}

.dashboard-change-form.seller .seller_form_input.account_name input {
    width:33.5%;
}

/* type part */

.seller_form_content.type .seller_form_input.type {
    vertical-align: top;
}
.seller_form_content.type .seller_form_input.type #id_type{
    list-style:none;
}

.seller_form_content.type .seller_form_input.type #id_type li{
    float:left;
}

/* account_number part */

.seller_form_content.account_number .seller_form_input.account_number select{
    width:40%;
}

.seller_form_content.account_number .seller_form_input.account_number input{
    width:40%;
}

/* company_name part */
.dashboard-change-form.seller .seller_form_content.company_name{
    width:55%;
    display: inline-block;
}

.dashboard-change-form.seller .seller_form_content.company_name .seller_form_title.company_name{
    width:45.5%;
}

.dashboard-change-form.seller .seller_form_content.company_name .seller_form_input.company_name{
    width:53%;
}

.seller_form_content.company_name #id_company_name{
    width:81%;
}

/* representative_name part */

.dashboard-change-form.seller .seller_form_content.representative_name {
    width:40%;
    display: inline-block;
}

.dashboard-change-form.seller .seller_form_content.representative_name input{
    width:100%;
}


/* corporate_number */
.seller_form_input.corporate_number input{
    width: 55%;
}


/* business_field part */
.dashboard-change-form.seller .seller_form_content.business_field{
    width:55%;
    display: inline-block;
}

.dashboard-change-form.seller .seller_form_content.business_field .seller_form_title.business_field{
    width:45.5%;
}

.dashboard-change-form.seller .seller_form_content.business_field .seller_form_input.business_field{
    width:49.5%;
}

.seller_form_content.business_field #id_business_field{
    width:87%;
}

/* company_type part */

.dashboard-change-form.seller .seller_form_content.company_type {
    width:40%;
    display: inline-block;
}

.dashboard-change-form.seller .seller_form_content.company_type input{
    width:100%;
}

/* business_license part */
.seller_form_content.business_license .seller_form_input.business_license input{
    /*background:none;*/
}


/* account_copy part */
.seller_form_content.account_copy .seller_form_input.account_copy input{
    /*background:none;*/
}


.seller_form_content input[type="file"] {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip:rect(0,0,0,0);
    border: 0;
}

.seller_form_input.business_license label {
    display: inline-block;
    padding: .3em .75em;
    color: #999;
    font-size: inherit;
    line-height: normal;
    vertical-align: top;
    background-color: white;
    cursor: pointer;
    border: 1px solid #ebebeb;
    border-bottom-color: #e2e2e2;
    border-radius: .25em;
}

.seller_form_input.account_copy label {
    display: inline-block;
    padding: .3em .75em;
    color: #999;
    font-size: inherit;
    line-height: normal;
    vertical-align: top;
    background-color: white;
    cursor: pointer;
    border: 1px solid #ebebeb;
    border-bottom-color: #e2e2e2;
    border-radius: .25em;
}

.seller_form_content .file_name {
    display: inline-block;
    padding: .5em .75em;
    /* label의 패딩값과 일치 */
    font-size: inherit;
    font-family: inherit;
    line-height: normal;
    vertical-align: middle;
    background: #5e5e5e;
/*
    background-color: #f5f5f5;

    border: 1px solid #ebebeb;
    border-bottom-color: #e2e2e2;
    border-radius: .25em;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;*/
}

/* change_button_seller part */
.change_button_seller{
    margin-left:40%;
    width:15%;
    height:30px;
    margin-top:10%;
    background-color: #648efc;
    color:white;
}


/* dialog customize */
#dialog-confirm{
    text-align: center;
}

#dialog-confirm2{
    text-align: center;
}

.ui-widget-header{
    width:80%;
    margin-left:5%;
    margin-top:3%;
    margin-bottom: 6%;
    background: none;
    border:none;
    border-bottom:1px solid black;
    border-radius:0px;
}

.ui-dialog .ui-dialog-titlebar-close{
    background: none;
    border: none;
    background-image: url("/static/img/cancle.png");
}

.ui-dialog-buttonpane.ui-widget-content.ui-helper-clearfix{
    border:none;
    text-align: center;
}

.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset{
    float:none;
}

.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset button{
    width:28%;
    background-color: white;
    border: 1px solid black;
    border-radius:3px;
    color: #000;
}

.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset button:nth-child(1){
    background-color: #648efc;
    border: 1px solid #648efc;
    color: white;
}

.ui-widget-overlay{
    background: white;
}

